src/examples/test-doubles/OnConsecutiveCallsExampleTest.php.out
./tools/phpunit tests/OnConsecutiveCallsExampleTest.php
PHPUnit 10.4.0 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.2.11

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 22.52 MB

There was 1 error:

1) OnConsecutiveCallsExampleTest::testOnConsecutiveCallsStub
PHPUnit\Framework\MockObject\Generator\ClassIsFinalException: Class "SomeClass" is declared "final" and cannot be doubled

/path/to/tests/OnConsecutiveCallsExampleTest.php:9

ERRORS!
Tests: 1, Assertions: 0, Errors: 1.
